--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(lme4,fixef)
 importFrom(lme4,lmer)
 importFrom(statmod,gauss.quad)
 importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
 importFrom(utils,read.table)
