--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ NeedsCompilation: yes
 RoxygenNote: 7.1.0
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
+Encoding: UTF-8
 Packaged: 2020-06-17; SL
 Repository: CRAN
 Date/Publication: 2019-05-17 08:30:03 UTC
+Biarch: TRUE
