--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
+importFrom(survival,coxph)
 importFrom(utils,read.table)
 useDynLib(FastJM, .registration = TRUE)
