--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(lme4,VarCorr)
 importFrom(lme4,fixef)
 importFrom(lme4,lmer)
+importFrom(reshape2,melt)
 importFrom(statmod,gauss.quad)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
