--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: FastJM
 Type: Package
 Title: Semiparametric Joint Modeling of Survival and Longitudinal Data
-Version: 1.0
+Version: 1.0.0
 Date: 2021-10-12
 Author: Shanpeng Li
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
 Description: Maximum likelihood estimation for the semiparametric joint modeling of survival and longitudinal data.
 License: GPL (>= 3)
 NeedsCompilation: yes
-Imports: Rcpp (>= 1.0.7)
+Imports: Rcpp (>= 1.0.7), MASS
 LinkingTo: Rcpp, RcppEigen
 Depends: R (>= 3.5.0), statmod, survival, dplyr, nlme, mvtnorm
 Suggests: testthat
