--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,4 @@ LinkingTo: Rcpp, RcppEigen
 Depends: R (>= 3.5.0)
 RoxygenNote: 7.1.2
 LazyData: true
+Packaged: 2021-12-19 02:16:44 UTC; shanpengli
