--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,28 @@ export(fixef)
 export(jmcs)
 export(ranef)
 export(survfitjmcs)
-
-importFrom("graphics", "abline", "axis", "lines", "mtext",
-           "panel.smooth", "par", "segments")
-
-importFrom("MASS", "mvrnorm")
-
-importFrom("stats", "as.formula", "median", "optim", "pnorm",
-           "qqline", "qqnorm", "quantile", "vcov")
+importFrom(MASS,mvrnorm)
+importFrom(Rcpp,evalCpp)
+importFrom(dplyr,left_join)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,panel.smooth)
+importFrom(graphics,par)
+importFrom(graphics,segments)
+importFrom(mvtnorm,rmvt)
+importFrom(nlme,getVarCov)
+importFrom(nlme,lme)
+importFrom(nlme,lmeControl)
+importFrom(statmod,gauss.quad)
+importFrom(stats,as.formula)
+importFrom(stats,median)
+importFrom(stats,optim)
+importFrom(stats,pnorm)
+importFrom(stats,qqline)
+importFrom(stats,qqnorm)
+importFrom(stats,quantile)
+importFrom(stats,vcov)
+importFrom(survival,coxph)
+useDynLib(FastJM, .registration = TRUE)
