--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: FastJM
 Type: Package
-Title: Semiparametric Joint Modeling of Survival and Longitudinal Data
+Title: Semi-Parametric Joint Modeling of Survival and Longitudinal Data
 Version: 1.0.0
-Date: 2021-10-12
+Date: 2021-12-25
 Author: Shanpeng Li
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
-Description: Maximum likelihood estimation for the semiparametric joint modeling of survival and longitudinal data.
+Description: Maximum likelihood estimation for the semi-parametric joint modeling of survival and longitudinal data.
 License: GPL (>= 3)
 NeedsCompilation: yes
 Imports: Rcpp (>= 1.0.7), MASS, statmod, survival, dplyr, nlme, mvtnorm
@@ -14,3 +14,5 @@ Depends: R (>= 3.5.0)
 RoxygenNote: 7.1.2
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
+Suggests: spelling
+Language: en-US
