--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,13 @@ Type: Package
 Title: Semi-Parametric Joint Modeling of Survival and Longitudinal Data
 Version: 1.0.0
 Date: 2021-12-25
-Author: Shanpeng Li
+Author: Shanpeng Li, Ning Li, Hong Wang, Jin Zhou, Hua Zhou, Gang Li
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
-Description: Maximum likelihood estimation for the semi-parametric joint modeling of survival and longitudinal data.
+Description: Maximum likelihood estimation for the semi-parametric joint modeling of competing risks and longitudinal data 
+    applying one way scan algorithm, proposed by Li and colleagues (2022) <arXiv:2110.14822>. The time-to-event data is 
+    modelled using a (cause-specific) Cox proportional hazards regression model with time-fixed covariates. The longitudinal 
+    outcome is modelled using a linear mixed effects model. The association is captured by shared random effects. The model 
+    is estimated using am Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
 Imports: Rcpp (>= 1.0.7), MASS, statmod, survival, dplyr, nlme, mvtnorm
@@ -14,5 +18,8 @@ Depends: R (>= 3.5.0)
 RoxygenNote: 7.1.2
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
-Suggests: spelling
+Suggests: 
+    testthat (>= 3.0.0),
+    spelling
 Language: en-US
+Config/testthat/edition: 3
