--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: FastJM
 Type: Package
-Title: Semi-Parametric Joint Modeling of Survival and Longitudinal Data
-Version: 1.0.0
-Date: 2022-01-04
+Title: Semi-Parametric Joint Modeling of Longitudinal and Survival Data
+Version: 1.0.1
+Date: 2022-01-10
 Authors@R: c(
     person("Shanpeng", "Li", email = "lishanpeng0913@ucla.edu", 
         role = c("aut", "cre")),
@@ -19,10 +19,10 @@ Authors@R: c(
     )
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
 Description: Maximum likelihood estimation for the semi-parametric joint modeling of competing risks and longitudinal data 
-    applying one way scan algorithm, proposed by Li and colleagues (2021) <arXiv:2110.14822>. The time-to-event data is 
+    applying customized linear scan algorithms, proposed by Li and colleagues (2021) <arXiv:2110.14822>. The time-to-event data is 
     modelled using a (cause-specific) Cox proportional hazards regression model with time-fixed covariates. The longitudinal 
     outcome is modelled using a linear mixed effects model. The association is captured by shared random effects. The model 
-    is estimated using am Expectation Maximization algorithm.
+    is estimated using an Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
 Imports: Rcpp (>= 1.0.7), MASS, statmod, survival, dplyr, nlme, mvtnorm
