add the compatiability of categorical variables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(nlme,lmeControl)
 importFrom(statmod,gauss.quad)
 importFrom(stats,as.formula)
 importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,qqline)
