--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: FastJM
 Type: Package
 Title: Semi-Parametric Joint Modeling of Longitudinal and Survival Data
-Version: 1.1.3
-Date: 2022-06-01
+Version: 1.2.0
+Date: 2022-08-03
 Authors@R: c(
     person("Shanpeng", "Li", email = "lishanpeng0913@ucla.edu", 
         role = c("aut", "cre")),
@@ -25,10 +25,10 @@ Description: Maximum likelihood estimation for the semi-parametric joint modelin
     is estimated using an Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
-Imports: Rcpp (>= 1.0.7), survival, dplyr, nlme, mvtnorm
+Imports: Rcpp (>= 1.0.7), survival, dplyr, nlme, mvtnorm, Hmisc
 LinkingTo: Rcpp, RcppEigen
 Depends: R (>= 3.5.0), MASS, statmod
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
 Suggests: 
