--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fixef)
 export(jmcs)
 export(ranef)
 export(survfitjmcs)
+importFrom(Hmisc,hdquantile)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,left_join)
