--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(nlme,lme)
 importFrom(nlme,lmeControl)
 importFrom(statmod,gauss.quad)
 importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
@@ -39,7 +40,10 @@ importFrom(stats,pnorm)
 importFrom(stats,qqline)
 importFrom(stats,qqnorm)
 importFrom(stats,quantile)
+importFrom(stats,rbeta)
 importFrom(stats,runif)
 importFrom(stats,vcov)
 importFrom(survival,coxph)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(FastJM, .registration = TRUE)
