--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(plot,survfitjmcs)
 S3method(print,jmcs)
 S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
+S3method(summary,jmcs)
 S3method(vcov,jmcs)
 export(fixef)
 export(jmcs)
