--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(anova,jmcs)
 S3method(fitted,jmcs)
 S3method(plot,jmcs)
 S3method(plot,survfitjmcs)
+S3method(print,Brierjmcs)
 S3method(print,jmcs)
 S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
 S3method(summary,jmcs)
 S3method(vcov,jmcs)
+export(Brierjmcs)
 export(fixef)
 export(jmcs)
 export(ranef)
