--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ S3method(plot,survfitjmcs)
 S3method(print,jmcs)
 S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
+S3method(summary,MAEQjmcs)
 S3method(summary,PEjmcs)
 S3method(summary,jmcs)
 S3method(vcov,jmcs)
+export(MAEQjmcs)
 export(PEjmcs)
 export(fixef)
 export(jmcs)
