--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(anova,jmcs)
 S3method(fitted,jmcs)
 S3method(plot,jmcs)
-S3method(plot,survfitjmcs)
 S3method(print,jmcs)
 S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
@@ -17,9 +16,8 @@ export(fixef)
 export(jmcs)
 export(ranef)
 export(survfitjmcs)
-importFrom(Hmisc,hdquantile)
-importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
+importFrom(caret,groupKFold)
 importFrom(dplyr,left_join)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
@@ -29,7 +27,6 @@ importFrom(graphics,panel.smooth)
 importFrom(graphics,par)
 importFrom(graphics,segments)
 importFrom(graphics,title)
-importFrom(mvtnorm,rmvt)
 importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
 importFrom(nlme,lmeControl)
@@ -49,6 +46,7 @@ importFrom(stats,rbeta)
 importFrom(stats,runif)
 importFrom(stats,vcov)
 importFrom(survival,coxph)
+importFrom(survival,survfit)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 useDynLib(FastJM, .registration = TRUE)
