--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: FastJM
 Type: Package
 Title: Semi-Parametric Joint Modeling of Longitudinal and Survival Data
-Version: 1.3.0
+Version: 1.3.1
 Date: 2023-03-25
 Authors@R: c(
     person("Shanpeng", "Li", email = "lishanpeng0913@ucla.edu", 
@@ -25,9 +25,9 @@ Description: Maximum likelihood estimation for the semi-parametric joint modelin
     is estimated using an Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
-Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret
+Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret, survival
 LinkingTo: Rcpp, RcppEigen
-Depends: R (>= 3.5.0), statmod, survival
+Depends: R (>= 3.5.0), statmod
 RoxygenNote: 7.2.3
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
