--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,16 +18,15 @@ Authors@R: c(
         role = "ctb")
     )
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
-Description: Maximum likelihood estimation for the semi-parametric joint modeling of competing risks and longitudinal data 
-    applying customized linear scan algorithms, proposed by Li and colleagues (2022) <doi:10.1155/2022/1362913>. The time-to-event data is 
-    modelled using a (cause-specific) Cox proportional hazards regression model with time-fixed covariates. The longitudinal 
-    outcome is modelled using a linear mixed effects model. The association is captured by shared random effects. The model 
-    is estimated using an Expectation Maximization algorithm.
+Description: Maximum likelihood estimation for the semi-parametric joint modeling of competing risks and longitudinal data applying customized linear scan algorithms, proposed by Li and colleagues (2022) <doi:10.1155/2022/1362913>. 
+             The time-to-event data is modelled using a (cause-specific) Cox proportional hazards regression model with time-fixed covariates. The longitudinal 
+             outcome is modelled using a linear mixed effects model. The association is captured by shared random effects. The model 
+             is estimated using an Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
 Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret, survival
 LinkingTo: Rcpp, RcppEigen
-Depends: R (>= 3.5.0), statmod
+Depends: R (>= 3.5.0), statmod, MASS
 RoxygenNote: 7.2.3
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
