--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,17 @@ export(fixef)
 export(jmcs)
 export(ranef)
 export(survfitjmcs)
+importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
-importFrom(caret,groupKFold)
 importFrom(dplyr,left_join)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,panel.smooth)
+importFrom(graphics,par)
+importFrom(graphics,segments)
+importFrom(graphics,title)
 importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
 importFrom(nlme,lmeControl)
@@ -31,8 +39,13 @@ importFrom(stats,model.matrix)
 importFrom(stats,optim)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
+importFrom(stats,qqline)
+importFrom(stats,qqnorm)
+importFrom(stats,quantile)
+importFrom(stats,rbeta)
 importFrom(stats,runif)
 importFrom(stats,vcov)
+importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survfit)
 useDynLib(FastJM, .registration = TRUE)
