--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: FastJM
 Type: Package
 Title: Semi-Parametric Joint Modeling of Longitudinal and Survival Data
-Version: 1.3.1
-Date: 2023-03-25
+Version: 1.4.0
+Date: 2023-10-10
 Authors@R: c(
     person("Shanpeng", "Li", email = "lishanpeng0913@ucla.edu", 
         role = c("aut", "cre")),
@@ -24,7 +24,7 @@ Description: Maximum likelihood estimation for the semi-parametric joint modelin
              is estimated using an Expectation Maximization algorithm.
 License: GPL (>= 3)
 NeedsCompilation: yes
-Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret, survival
+Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret, survival, timeROC
 LinkingTo: Rcpp, RcppEigen
 Depends: R (>= 3.5.0), statmod, MASS
 RoxygenNote: 7.2.3
