--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,19 +8,29 @@ S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
 S3method(summary,AUCjmcs)
 S3method(summary,MAEQjmcs)
+S3method(summary,PAjmcs)
 S3method(summary,PEjmcs)
 S3method(summary,jmcs)
 S3method(vcov,jmcs)
 export(AUCjmcs)
 export(MAEQjmcs)
+export(PAjmcs)
 export(PEjmcs)
 export(fixef)
 export(jmcs)
 export(ranef)
+export(runEMbeta)
+export(simmvJMdata)
+export(survPAjmcs)
 export(survfitjmcs)
+import(PAmeasures)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,across)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
+importFrom(dplyr,n)
+importFrom(dplyr,row_number)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
@@ -29,6 +39,7 @@ importFrom(graphics,panel.smooth)
 importFrom(graphics,par)
 importFrom(graphics,segments)
 importFrom(graphics,title)
+importFrom(magrittr,"%>%")
 importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
 importFrom(nlme,lmeControl)
