--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(ranef)
 export(simmvJMdata)
 export(survPAjmcs)
 export(survfitjmcs)
+export(survfitmvjmcs)
 import(PAmeasures)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
