--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(anova,jmcs)
 S3method(fitted,jmcs)
 S3method(plot,jmcs)
 S3method(print,jmcs)
+S3method(print,mvjmcs)
 S3method(print,survfitjmcs)
 S3method(residuals,jmcs)
 S3method(summary,AUCjmcs)
@@ -47,6 +48,7 @@ importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
 importFrom(stats,optim)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
