--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ License: GPL (>= 3)
 NeedsCompilation: yes
 Imports: Rcpp (>= 1.0.7), dplyr, nlme, caret, timeROC
 LinkingTo: Rcpp, RcppEigen
-Depends: R (>= 3.5.0), survival, nlme, utils, MASS, statmod, magrittr
+Depends: R (>= 3.5.0), survival, utils, MASS, statmod, magrittr
 RoxygenNote: 7.3.2
 LazyData: true
 Packaged: 2021-12-19 02:16:44 UTC; shanpengli
