--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,10 +11,10 @@ S3method(summary,AUCjmcs)
 S3method(summary,MAEQjmcs)
 S3method(summary,PEjmcs)
 S3method(summary,jmcs)
+S3method(summary,mvjmcs)
 S3method(vcov,jmcs)
 export(AUCjmcs)
 export(MAEQjmcs)
-export(PAjmcs)
 export(PEjmcs)
 export(fixef)
 export(jmcs)
@@ -22,7 +22,6 @@ export(mvjmcs)
 export(ranef)
 export(simmvJMdata)
 export(survfitjmcs)
-export(survfitmvjmcs)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,across)
@@ -56,6 +55,8 @@ importFrom(stats,qqline)
 importFrom(stats,qqnorm)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
+importFrom(stats,rexp)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,vcov)
 importFrom(survival,Surv)
