add surviftmvjmcs developing version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(mvjmcs)
 export(ranef)
 export(simmvJMdata)
 export(survfitjmcs)
+export(survfitmvjmcs)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,across)
