update minor codes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,9 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,n)
 importFrom(dplyr,row_number)
+importFrom(future,multisession)
+importFrom(future,plan)
+importFrom(future.apply,future_lapply)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
