fix small bugs in dynamic prediction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,jmcs)
 S3method(print,jmcs)
 S3method(print,mvjmcs)
 S3method(print,survfitjmcs)
+S3method(print,survfitmvjmcs)
 S3method(residuals,jmcs)
 S3method(summary,AUCjmcs)
 S3method(summary,MAEQjmcs)
