--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,4 +68,6 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survfit)
 importFrom(timeROC,timeROC)
+importFrom(utils,combn)
+importFrom(utils,head)
 useDynLib(FastJM, .registration = TRUE)
