--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(magrittr,"%>%")
 importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
 importFrom(nlme,lmeControl)
+importFrom(rlang,.data)
 importFrom(statmod,gauss.quad)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
