--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,13 +19,13 @@ Authors@R: c(
     )
 Maintainer: Shanpeng Li <lishanpeng0913@ucla.edu>
 Encoding: UTF-8
-Description: A joint model for large-scale, competing risks time-to-event data with singular or multiple longitudinal biomarkers, implemented with the efficient algorithms developed by Li and colleagues (2022) <doi:10.1155/2022/1362913> and <arXiv:2506.12741>.
+Description: A joint model for large-scale, competing risks time-to-event data with singular or multiple longitudinal biomarkers, implemented with the efficient algorithms developed by Li and colleagues (2022) <doi:10.1155/2022/1362913> and <arXiv.2506.12741>.
              The time-to-event data is modelled using a (cause-specific) Cox 
              proportional hazards regression model with time-fixed covariates. 
              The longitudinal biomarkers are modelled using a linear mixed 
              effects model. The association between the longitudinal submodel 
              and the survival submodel is captured through shared random 
-             effects. It allows researchers to analyze biobank-scale data to 
+             effects. It allows researchers to analyze large-scale data to 
              model biomarker trajectories, estimate their effects on event 
              outcomes, and dynamically predict future events from patients’ 
              past histories. A function for simulating survival and longitudinal 
