--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(summary,jmcs)
 S3method(summary,mvjmcs)
 S3method(vcov,jmcs)
 export(AUCjmcs)
+export(Concordancejmcs)
 export(MAEQjmcs)
 export(PEjmcs)
 export(fixef)
