--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,survfitjmcs)
 S3method(print,survfitmvjmcs)
 S3method(residuals,jmcs)
 S3method(summary,AUCjmcs)
+S3method(summary,Concordancejmcs)
 S3method(summary,MAEQjmcs)
 S3method(summary,PEjmcs)
 S3method(summary,jmcs)
